--- a/404.html
+++ b/404.html
@@ -3,8 +3,8 @@ permalink: /404.html
 layout: root
 ---
 
-<div class="container text-center">
-  <h1>404</h1>
+<div class="container text-center pt-5" style="min-height: 400px;">
+  <h1 class="mt-5">404</h1>
   <p><strong>Page not found :(</strong></p>
   <p>The requested page could not be found.</p>
 </div>
