--- a/404.html
+++ b/404.html
@@ -1,6 +1,7 @@
 ---
 permalink: /404.html
 layout: root
+page-title: Error 404
 ---
 
 <div class="container text-center pt-5" style="min-height: 400px;">
