--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <span>Sam Naseem</span>
   </a>
   <button class="nav-toggle" aria-label="Menu">☰</button>
-  <div class="nav-links"><a href="how-i-work/">How I Work</a>
+  <div class="nav-links"><a href="what-i-do/">What I Do</a>
+<a href="how-i-work/">How I Work</a>
 <a href="engagement-types/">Engagements</a>
 <a href="architectural-practice/">Practice</a>
 <a href="principles-and-boundaries/">Principles</a>
@@ -37,7 +38,7 @@
     </div>
     <h1>Clarity before code.<br><span class="accent">Architecture</span> before delivery.</h1>
     <p class="hero-desc">This site is home for Sam Naseem, an independent solutions architect focused on problem framing, architectural authorship, and system stewardship across organisational boundaries.</p>
-    <p class="hero-ai-note">Helping leaders understand complex domain problems, design coherent technical visions, and align delivery with long term business outcomes.</p>
+    <p class="hero-ai-note">Helping leaders understand complex domain problems, design coherent technical visions, and align delivery with long term business outcomes. Driven by applied intelligence: the experience, judgement, and technical depth to see what others miss and act on what matters.</p>
     <div class="hero-actions">
       <a href="https://www.linkedin.com/in/samnaseem/" class="btn-primary" target="_blank" rel="noopener">Start a Conversation &rarr;</a>
       <span class="scroll-hint">or scroll to explore &darr;</span>
@@ -50,20 +51,22 @@
   <div class="section-inner">
     <div class="section-label">AI &amp; Applied Intelligence</div>
     <h2 class="section-title">Architecture shaped by <span class="accent">applied intelligence</span></h2>
-    <p class="section-subtitle">Architectural decisions in complex organisations increasingly depend on understanding where AI and machine learning create genuine value and where they introduce hidden risk. This understanding is integrated at every level of practice.</p>
-    <div class="ai-grid"><div class="ai-tag "><div class="ai-tag-tier">Core ML</div><div class="ai-tag-name">Deep Learning</div></div>
-<div class="ai-tag "><div class="ai-tag-tier">Core ML</div><div class="ai-tag-name">Reinforcement Learning</div></div>
-<div class="ai-tag "><div class="ai-tag-tier">Core ML</div><div class="ai-tag-name">Supervised Learning</div></div>
-<div class="ai-tag "><div class="ai-tag-tier">Core ML</div><div class="ai-tag-name">Unsupervised Learning</div></div>
-<div class="ai-tag tier-2"><div class="ai-tag-tier">Applied Intelligence</div><div class="ai-tag-name">Natural Language Processing</div></div>
-<div class="ai-tag tier-2"><div class="ai-tag-tier">Applied Intelligence</div><div class="ai-tag-name">Computer Vision</div></div>
-<div class="ai-tag tier-2"><div class="ai-tag-tier">Applied Intelligence</div><div class="ai-tag-name">Generative AI</div></div>
-<div class="ai-tag tier-2"><div class="ai-tag-tier">Applied Intelligence</div><div class="ai-tag-name">MLOps &amp; Pipelines</div></div>
-<div class="ai-tag tier-3"><div class="ai-tag-tier">Enterprise Strategy</div><div class="ai-tag-name">Predictive Analytics</div></div>
-<div class="ai-tag tier-3"><div class="ai-tag-tier">Enterprise Strategy</div><div class="ai-tag-name">Intelligent Automation</div></div>
-<div class="ai-tag tier-3"><div class="ai-tag-tier">Enterprise Strategy</div><div class="ai-tag-name">Responsible AI</div></div>
-<div class="ai-tag tier-3"><div class="ai-tag-tier">Enterprise Strategy</div><div class="ai-tag-name">AI Strategy &amp; Governance</div></div>
+    <p class="section-subtitle">Applied intelligence is the ability to read a situation, draw on deep experience across industries and disciplines, and make sharp decisions about what actually matters. It is the reason systems get authored well, stewardship holds under pressure, and complex problems get solved rather than deferred.</p>
+    <p class="section-subtitle">That intelligence is sharpened by genuine fluency across AI and machine learning. Not as a sales pitch, but as a working understanding of where these capabilities create real value, where they introduce hidden risk, and how they reshape the architectural decisions that determine long term outcomes.</p>
+    <div class="ai-grid"><div class="ai-tag "><a href="ai-and-applied-intelligence/deep-learning.html" class="ai-tag-link"><div class="ai-tag-tier">Core ML</div><div class="ai-tag-name">Deep Learning</div></a></div>
+<div class="ai-tag "><a href="ai-and-applied-intelligence/reinforcement-learning.html" class="ai-tag-link"><div class="ai-tag-tier">Core ML</div><div class="ai-tag-name">Reinforcement Learning</div></a></div>
+<div class="ai-tag "><a href="ai-and-applied-intelligence/supervised-learning.html" class="ai-tag-link"><div class="ai-tag-tier">Core ML</div><div class="ai-tag-name">Supervised Learning</div></a></div>
+<div class="ai-tag "><a href="ai-and-applied-intelligence/unsupervised-learning.html" class="ai-tag-link"><div class="ai-tag-tier">Core ML</div><div class="ai-tag-name">Unsupervised Learning</div></a></div>
+<div class="ai-tag tier-2"><a href="ai-and-applied-intelligence/natural-language-processing.html" class="ai-tag-link"><div class="ai-tag-tier">Applied AI</div><div class="ai-tag-name">Natural Language Processing</div></a></div>
+<div class="ai-tag tier-2"><a href="ai-and-applied-intelligence/computer-vision.html" class="ai-tag-link"><div class="ai-tag-tier">Applied AI</div><div class="ai-tag-name">Computer Vision</div></a></div>
+<div class="ai-tag tier-2"><a href="ai-and-applied-intelligence/generative-ai.html" class="ai-tag-link"><div class="ai-tag-tier">Applied AI</div><div class="ai-tag-name">Generative AI</div></a></div>
+<div class="ai-tag tier-2"><a href="ai-and-applied-intelligence/mlops-and-pipelines.html" class="ai-tag-link"><div class="ai-tag-tier">Applied AI</div><div class="ai-tag-name">MLOps &amp; Pipelines</div></a></div>
+<div class="ai-tag tier-3"><a href="ai-and-applied-intelligence/predictive-analytics.html" class="ai-tag-link"><div class="ai-tag-tier">Enterprise Strategy</div><div class="ai-tag-name">Predictive Analytics</div></a></div>
+<div class="ai-tag tier-3"><a href="ai-and-applied-intelligence/intelligent-automation.html" class="ai-tag-link"><div class="ai-tag-tier">Enterprise Strategy</div><div class="ai-tag-name">Intelligent Automation</div></a></div>
+<div class="ai-tag tier-3"><a href="ai-and-applied-intelligence/responsible-ai.html" class="ai-tag-link"><div class="ai-tag-tier">Enterprise Strategy</div><div class="ai-tag-name">Responsible AI</div></a></div>
+<div class="ai-tag tier-3"><a href="ai-and-applied-intelligence/ai-strategy-and-governance.html" class="ai-tag-link"><div class="ai-tag-tier">Enterprise Strategy</div><div class="ai-tag-name">AI Strategy &amp; Governance</div></a></div>
 </div>
+    <div style="text-align:center;margin-top:32px;"><a href="ai-and-applied-intelligence/" class="btn-primary">Explore All 12 Disciplines &rarr;</a></div>
   </div>
 </section>
 
@@ -127,23 +130,23 @@
   <div class="section-divider-subtle"></div>
   <div class="section-inner">
     <div class="section-label">Enterprise Systems &amp; Integration</div>
-    <p style="font-size:15px;color:var(--text-muted);max-width:560px;line-height:1.7;margin-bottom:32px;">Working with, between, and beneath the enterprise platforms that organisations depend on. Connecting what exists, modernising what cannot stay, and finding value others have missed.</p>
+    <p style="font-size:15px;color:var(--text-muted);line-height:1.7;margin-bottom:32px;">Working with, between, and beneath the enterprise platforms that organisations depend on. Connecting what exists, modernising what cannot stay, and finding value others have missed.</p>
     <div class="card-grid">
-      <div class="card">
+      <a href="what-i-do/portfolio-integration-and-abstraction.html" class="card" style="text-decoration:none;">
         <div class="card-label">Enterprise Integration</div>
         <h3>Portfolio Integration &amp; Abstraction Layer Design</h3>
         <p>Architecting abstraction layers between disparate enterprise systems (ERPs, CRMs, PMRs, EPOS and other automated data flow platforms) to unify functionality and enable smoother transitions when companies are acquired, sold, or restructured within a larger portfolio or estate. Creating the connective tissue that would otherwise be mismatched, non existent, or too narrowly tailored to a single industry's needs.</p>
-      </div>
-      <div class="card">
+      </a>
+      <a href="what-i-do/latent-value-discovery.html" class="card" style="text-decoration:none;">
         <div class="card-label">Value Discovery</div>
         <h3>Uncovering Latent Value in Existing Systems</h3>
         <p>Constantly looking for ways to discover untapped value whenever engaged with or exposed to a client's data, workflows, or operational landscape. Proactively identifying opportunities to enhance, improve, and add value that the organisation may not yet realise exists within its own systems.</p>
-      </div>
-      <div class="card">
+      </a>
+      <a href="what-i-do/technical-debt-and-platform-migration.html" class="card" style="text-decoration:none;">
         <div class="card-label">Legacy Modernisation</div>
         <h3>Technical Debt Resolution &amp; Platform Migration</h3>
         <p>Specialising in long term technical debt resolution: working on older monolithic systems and migrating them methodically to modern platforms such as microservices, ensuring maximum uptime throughout. Meticulous attention to continuity means nothing goes down, informed by years of experience managing high stakes, zero downtime transitions.</p>
-      </div>
+      </a>
     </div>
   </div>
 </section>
@@ -153,23 +156,23 @@
   <div class="section-divider-subtle"></div>
   <div class="section-inner">
     <div class="section-label">Operational Clarity &amp; Delivery</div>
-    <p style="font-size:15px;color:var(--text-muted);max-width:560px;line-height:1.7;margin-bottom:32px;">Translating organisational complexity into working systems. Aligning people, simplifying processes, and shipping continuously.</p>
+    <p style="font-size:15px;color:var(--text-muted);line-height:1.7;margin-bottom:32px;">Translating organisational complexity into working systems. Aligning people, simplifying processes, and shipping continuously.</p>
     <div class="card-grid">
-      <div class="card">
+      <a href="what-i-do/workflow-design-and-stakeholder-alignment.html" class="card" style="text-decoration:none;">
         <div class="card-label">Operational Experience</div>
         <h3>Workflow Design &amp; Stakeholder Alignment</h3>
         <p>Understanding specific operational pain points and devising simple, effective interfaces with the necessary workflows to increase productivity and operating satisfaction. Proactively engaging with the right stakeholders and working with logic, reason, and transparency to ensure everyone is aligned before a single line of code is written.</p>
-      </div>
-      <div class="card">
+      </a>
+      <a href="what-i-do/complexity-resolution.html" class="card" style="text-decoration:none;">
         <div class="card-label">Complexity Resolution</div>
         <h3>Making Complex Problems Disappear</h3>
         <p>Consulting on seemingly complex systems, operational, functional, or process issues and making them go away. Ensuring the situation is understood thoroughly so that the solution makes sense, not just technically, but organisationally. Turning confusion into clarity and inertia into momentum.</p>
-      </div>
-      <div class="card">
+      </a>
+      <a href="what-i-do/ci-cd-driven-delivery.html" class="card" style="text-decoration:none;">
         <div class="card-label" style="color:var(--secondary);">Delivery Practice</div>
         <h3>CI/CD Driven Production Workflows</h3>
         <p>Using CI/CD as a steering mechanism across all engagements to ensure a dynamically designed production workflow is utilised throughout. This approach delivers maximum value at pace while maintaining the ability to adapt direction continuously based on real feedback and evolving requirements.</p>
-      </div>
+      </a>
     </div>
   </div>
 </section>
@@ -179,23 +182,23 @@
   <div class="section-divider-subtle"></div>
   <div class="section-inner">
     <div class="section-label">Crisis, Complexity &amp; Intervention</div>
-    <p style="font-size:15px;color:var(--text-muted);max-width:560px;line-height:1.7;margin-bottom:32px;">When things go wrong, when nobody else can fix it, or when the problem simply needs more horsepower than anyone else is willing to throw at it.</p>
+    <p style="font-size:15px;color:var(--text-muted);line-height:1.7;margin-bottom:32px;">When things go wrong, when nobody else can fix it, or when the problem simply needs more horsepower than anyone else is willing to throw at it.</p>
     <div class="card-grid">
-      <div class="card">
+      <a href="what-i-do/emergency-backstop-and-continuity.html" class="card" style="text-decoration:none;">
         <div class="card-label" style="color:#C45A3A;">Continuity Engineering</div>
         <h3>Emergency Backstop &amp; Pipeline Architecture</h3>
         <p>Specialising in situations where automated pipelines need to be rapidly developed to act as a backstop when primary systems must be taken offline without warning. Ensuring the flood of data, orders, transactions, and operational flow continues uninterrupted, keeping systems seemingly operational to the outside world while the underlying architecture is repaired, replaced, or upgraded beneath them.</p>
-      </div>
-      <div class="card">
+      </a>
+      <a href="what-i-do/specialist-intervention.html" class="card" style="text-decoration:none;">
         <div class="card-label" style="color:#C45A3A;">Specialist Intervention</div>
         <h3>Complex Ad Hoc Situations &amp; Capability Gaps</h3>
         <p>Stepping in where internal capacity lacks the knowledge or skill to oversee a complex, ad hoc situation. Whether the challenge is unfamiliar technology, an unprecedented operational scenario, or a problem that falls outside any existing team's expertise, providing the senior architectural judgement needed to navigate it with clarity and confidence.</p>
-      </div>
-      <div class="card">
+      </a>
+      <a href="what-i-do/high-intensity-problem-solving.html" class="card" style="text-decoration:none;">
         <div class="card-label" style="color:#C45A3A;">High Intensity Problem Solving</div>
         <h3>Attacking Complex Enterprise Problems with Horsepower</h3>
         <p>A genuine passion for the hardest enterprise technical problems. Not content to work around complexity or defer to simpler alternatives. These are the problems that benefit from significant technical depth, sustained focus, and the willingness to go deep enough to resolve them properly rather than patch over them.</p>
-      </div>
+      </a>
     </div>
   </div>
 </section>
@@ -233,11 +236,13 @@
   <div class="footer-links">
     <img src="images/profile-pic.jpeg" alt="">
     <div class="footer-links-inner">
-      <a href="how-i-work/">How I Work</a>
+      <a href="what-i-do/">What I Do</a>
+<a href="how-i-work/">How I Work</a>
       <a href="engagement-types/">Engagements</a>
       <a href="architectural-practice/">Practice</a>
       <a href="principles-and-boundaries/">Principles</a>
       <a href="about-me/">About</a>
+      <a href="ai-and-applied-intelligence/">AI &amp; Intelligence</a>
       <a href="venture-assessment/">Assessment</a>
       <a href="venture-co-formation/">Co Formation</a>
     </div>
