--- a/venture-co-formation/access-and-introductions.html
+++ b/venture-co-formation/access-and-introductions.html
@@ -106,11 +106,13 @@
   <div class="footer-links">
     <img src="../images/profile-pic.jpeg" alt="">
     <div class="footer-links-inner">
+      <a href="../what-i-do/">What I Do</a>
       <a href="../how-i-work/">How I Work</a>
       <a href="../engagement-types/">Engagements</a>
       <a href="../architectural-practice/">Practice</a>
       <a href="../principles-and-boundaries/">Principles</a>
       <a href="../about-me/">About</a>
+      <a href="../ai-and-applied-intelligence/">AI &amp; Intelligence</a>
       <a href="../venture-assessment/">Assessment</a>
       <a href="../venture-co-formation/">Co Formation</a>
     </div>
