--- a/about-me/index.html
+++ b/about-me/index.html
@@ -20,7 +20,8 @@
     <span>Sam Naseem</span>
   </a>
   <button class="nav-toggle" aria-label="Menu">☰</button>
-  <div class="nav-links"><a href="../how-i-work/">How I Work</a>
+  <div class="nav-links"><a href="../what-i-do/">What I Do</a>
+      <a href="../how-i-work/">How I Work</a>
 <a href="../engagement-types/">Engagements</a>
 <a href="../architectural-practice/">Practice</a>
 <a href="../principles-and-boundaries/">Principles</a>
@@ -30,7 +31,7 @@
   <div class="breadcrumbs"><a href="../">Home</a><span class="sep">/</span>About Me</div>
   <div class="section-label">Identity</div>
   <h1>About Sam</h1>
-  <p class="lead">Clarity, Architecture &amp; Long Term System Coherence for Complex Organisations</p>
+  <p class="lead">Clarity, Architecture &amp; Long Term System Coherence for Complex Organisations. Driven by Applied Intelligence.</p>
 </div></section>
 <section class="content"><div class="content-inner">
 <h2>Independent architectural judgement</h2>
@@ -53,6 +54,11 @@
 <p>These writings are drawn from real-world experience and are intended to explore how complex systems behave over time, rather than to promote specific tools, frameworks, or trends.</p>
 <h2>Skills &amp; Technologies</h2>
 <div class="pills"><span class="pill">AI/ML</span><span class="pill">Leadership &amp; Management</span><span class="pill">B2B Strategies</span><span class="pill">Marketing &amp; Sales</span><span class="pill">Business &amp; Product Development</span><span class="pill">Full Stack Development</span><span class="pill">AWS</span><span class="pill">Azure</span><span class="pill">CI/CD</span><span class="pill">C#/VB.Net</span><span class="pill">Python</span><span class="pill">GoLang</span><span class="pill">PHP</span><span class="pill">XHTML</span><span class="pill">CSS</span><span class="pill">C/C++</span><span class="pill">Arduino</span><span class="pill">MongoDB</span><span class="pill">MSSQL</span><span class="pill">MySQL</span><span class="pill">Rust</span><span class="pill">Flutter</span><span class="pill">Dart</span><span class="pill">SwiftUI</span><span class="pill">Jetpack Compose</span><span class="pill">Kotlin</span><span class="pill">.Net MAUI</span><span class="pill">Blazor WebAssembly</span></div>
+
+<h2>Applied Intelligence</h2>
+<p>What sets this work apart is not a list of technologies or certifications. It is the intelligence applied to every situation: the ability to walk into a complex, unfamiliar environment and quickly understand what is actually happening beneath the surface. To recognise patterns across industries, connect signals that others treat as separate, and make sharp decisions about what matters and what does not.</p>
+<p>This is what makes solutions architecture more than drawing diagrams. It is what makes system authorship possible, because authoring a system means taking responsibility for how it behaves over time, not just how it looks on day one. It is what makes stewardship real, because protecting architectural intent under pressure requires judgement that cannot be automated or outsourced.</p>
+<p>That intelligence is sharpened by genuine fluency across AI and machine learning. Understanding where these capabilities create real value, where they introduce hidden risk, and how they reshape the decisions that determine long term outcomes. This is not theoretical knowledge. It is working understanding, built through hands on experience across enterprise environments where getting it wrong has real consequences.</p>
 
 <h2>Applied Specialisms</h2>
 <p>Beyond strategic architectural work, these are the practical disciplines where deep technical experience meets operational reality.</p>
@@ -96,11 +102,13 @@
   <div class="footer-links">
     <img src="../images/profile-pic.jpeg" alt="">
     <div class="footer-links-inner">
+      <a href="../what-i-do/">What I Do</a>
       <a href="../how-i-work/">How I Work</a>
       <a href="../engagement-types/">Engagements</a>
       <a href="../architectural-practice/">Practice</a>
       <a href="../principles-and-boundaries/">Principles</a>
       <a href="../about-me/">About</a>
+      <a href="../ai-and-applied-intelligence/">AI &amp; Intelligence</a>
       <a href="../venture-assessment/">Assessment</a>
       <a href="../venture-co-formation/">Co Formation</a>
     </div>
