--- a/architectural-practice/independent-technical-authority.html
+++ b/architectural-practice/independent-technical-authority.html
@@ -20,7 +20,8 @@
     <span>Sam Naseem</span>
   </a>
   <button class="nav-toggle" aria-label="Menu">☰</button>
-  <div class="nav-links"><a href="../how-i-work/">How I Work</a>
+  <div class="nav-links"><a href="../what-i-do/">What I Do</a>
+      <a href="../how-i-work/">How I Work</a>
 <a href="../engagement-types/">Engagements</a>
 <a href="../architectural-practice/" class="active">Practice</a>
 <a href="../principles-and-boundaries/">Principles</a>
@@ -95,11 +96,13 @@
   <div class="footer-links">
     <img src="../images/profile-pic.jpeg" alt="">
     <div class="footer-links-inner">
+      <a href="../what-i-do/">What I Do</a>
       <a href="../how-i-work/">How I Work</a>
       <a href="../engagement-types/">Engagements</a>
       <a href="../architectural-practice/">Practice</a>
       <a href="../principles-and-boundaries/">Principles</a>
       <a href="../about-me/">About</a>
+      <a href="../ai-and-applied-intelligence/">AI &amp; Intelligence</a>
       <a href="../venture-assessment/">Assessment</a>
       <a href="../venture-co-formation/">Co Formation</a>
     </div>
